# rusty_ollama_gui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  license.txt
.github/workflows/: semver.yml
chats/: 5b7c3d06-2d5e-4710-bb6e-ec747a6f0311.json  9eb931d4-0c07-4ffc-b18c-de98f9062b92.txt
settings/: settings.json
src/: main.rs  streaming_ollama.rs
src/application/: application.rs  mod.rs
src/application/iced_settings/: iced_settings.rs  mod.rs
