[package]
name = "rusty_ollama_gui"
version = "0.1.0"
edition = "2021"
authors = ["lowpolycat1"]
description = "A blazingly fast Ollama GUI written in rust"
license = "MIT"
repository = "https://github.com/lowpolycat1/rusty_ollama_gui"
publish = false


[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio"] }
iced_aw = { version = "0.12.0" }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["stream", "rustls-tls", "json"] }
uuid = { version = "1.13.2", features = ["v4"] }
serde_json = { version = "1.0.139" }
serde = { version = "1.0.218", features = ["derive"] }


[target.'cfg(windows)'.build-dependencies]
windows_exe_info = "0.4.2"


[dev-dependencies]


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
rpath = false
